WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178532
re-inline ObjectAllocationProfile::initializeProfile
https://bugs.webkit.org/show_bug.cgi?id=178532
Summary
re-inline ObjectAllocationProfile::initializeProfile
Saam Barati
Reported
2017-10-19 12:24:49 PDT
I un-inlined this when doing poly proto. I think there are contexts where inlining this actually turns the function into very few instructions.
Attachments
patch
(21.77 KB, patch)
2017-10-19 14:50 PDT
,
Saam Barati
msaboff
: review+
Details
Formatted Diff
Diff
patch for landing
(21.99 KB, patch)
2017-10-19 14:56 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2017-10-19 14:50:59 PDT
Created
attachment 324296
[details]
patch
Michael Saboff
Comment 2
2017-10-19 14:51:54 PDT
Comment on
attachment 324296
[details]
patch rs=me
Saam Barati
Comment 3
2017-10-19 14:52:22 PDT
Comment on
attachment 324296
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=324296&action=review
> Source/JavaScriptCore/bytecode/ObjectAllocationProfileInlines.h:25 > +
OOPS I'm missing pragma once. Will add
Build Bot
Comment 4
2017-10-19 14:52:43 PDT
Attachment 324296
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/bytecode/ObjectAllocationProfileInlines.h:26: Header file should not contain WebCore config.h. Should be: alphabetically sorted. [build/include_order] [4] ERROR: Source/JavaScriptCore/bytecode/ObjectAllocationProfileInlines.h:28: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 5
2017-10-19 14:56:37 PDT
Created
attachment 324298
[details]
patch for landing
Build Bot
Comment 6
2017-10-19 14:58:32 PDT
Attachment 324298
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/bytecode/ObjectAllocationProfileInlines.h:29: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 7
2017-10-19 16:34:28 PDT
Comment on
attachment 324298
[details]
patch for landing Clearing flags on attachment: 324298 Committed
r223727
: <
https://trac.webkit.org/changeset/223727
>
WebKit Commit Bot
Comment 8
2017-10-19 16:34:30 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9
2017-11-15 13:02:22 PST
<
rdar://problem/35568665
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug